LoyaltyApp/force-app/main/default/objects/Loyalty_Business_Group_Value__c/Loyalty_Business_Group_Value__c.object-meta.xml
<CustomObject>
    <label>Loyalty Business Group Value</label>
    <nameField>
        <label>Loyalty Business Group Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Business Group Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>