LoyaltyApp/force-app/main/default/objects/Loyalty_Business_Group_Value__c/fields/Business_Group__c.field-meta.xml
<CustomField>
    <fullName>Business_Group__c</fullName>
    <label>Business Group</label>
    <referenceTo>Business_Group__c</referenceTo>
    <relationshipLabel>Loyalty Business Group Values</relationshipLabel>
    <relationshipName>Loyalty_Business_Group_Values</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>