LoyaltyApp/force-app/main/default/objects/Loyalty_Business_Group_Value__c/fields/Business_Group_Value_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Group_Value_Code__c</fullName>
    <displayFormat>GROUPVALUE-{0000}</displayFormat>
    <label>Business Group Value Code</label>
    <type>AutoNumber</type>
</CustomField>