LoyaltyApp/force-app/main/default/objects/Loyalty_Business_Group_Value__c/fields/Loyalty_Value__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Value__c</fullName>
    <label>Loyalty Value</label>
    <referenceTo>Loyalty_Value__c</referenceTo>
    <relationshipLabel>Loyalty Business Group Values</relationshipLabel>
    <relationshipName>Loyalty_Business_Group_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>